# versioning_test

./: CMakeLists.txt  README.md  main.cpp  version.h.in  version.txt
second_app/: CMakeLists.txt  second.cpp
